--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!doctype html>
 <html lang="en">
-<head></head>
+<meta charset="utf-8"/>
+<link rel="stylesheet" href="styles/tailwind.css"/>
+<base data-trunk-public-url/>
+<title>Yew App</title>
 <body></body>
 </html>
+
+
+
