feat(项目): 引入css & demo

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html lang="en">
-<meta charset="utf-8"/>
-<link rel="stylesheet" href="styles/tailwind.css"/>
-<base data-trunk-public-url/>
-<title>Yew App</title>
+<head>
+    <meta charset="utf-8"/>
+    <link data-trunk rel="copy-dir" href="static">
+    <link data-trunk rel="scss" href="/static/css/tailwind.css" />
+    <link data-trunk rel="scss" href="/static/css/styles.css" />
+
+    <base data-trunk-public-url>
+    <title>Yew App</title>
+</head>
 <body></body>
 </html>
 
