chore(项目): 重构目录结构

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link data-trunk rel="copy-dir" href="static">
-    <link data-trunk rel="scss" href="/static/css/tailwind.css" />
-    <link data-trunk rel="scss" href="/static/css/styles.css" />
+    <link data-trunk rel="copy-dir" href="public">
+    <link data-trunk rel="scss" href="/styles/tailwind.css" />
+    <link data-trunk rel="scss" href="/styles/app.css" />
 
     <base data-trunk-public-url>
     <title>Yew App</title>
