feat(sidebar): 文件树

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <link data-trunk rel="rust" data-bin="main" />
     <link data-trunk rel="copy-dir" href="public">
     <link data-trunk rel="scss" href="/styles/app.css" />
+    <!-- index.html -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <base data-trunk-public-url>
     <title>Yew App</title>
