feat(note): markdown 渲染

--- a/index.html
+++ b/index.html
@@ -13,43 +13,13 @@
 
     <script type="text/javascript">
     var mathPackages = ['noundefined', 'autoload', 'ams', 'textmacros', 'xypic'];
-    if((window._options || {}).allowPhysicsConflict) {
-        mathPackages.push('physics');
-    }
-
-    var autoNumberingForMath = (window._options || {}).autoNumberingForMath;
-    var mathJaxTags = autoNumberingForMath ? "all" : "none";
-    if(autoNumberingForMath == "ams") mathJaxTags = "ams";
-    if(autoNumberingForMath == "0" || autoNumberingForMath == "null" || autoNumberingForMath == "false" || autoNumberingForMath == "nil") mathJaxTags = "none";
-
-
-    window.MathJax = {
-        loader: {load: [/*'ui/safe', 'a11y/semantic-enrich',*/ 'http://sonoisa.github.io/xyjax_ext/xypic.js']},
-        startup: {
-            typeset: false,
-            ready: () => {
-                console.debug('MathJax is loaded, but not yet initialized');
-
-                const {RANGES} = MathJax._.core.MmlTree.OperatorDictionary;
-                RANGES[28][3] = RANGES[30][3] = RANGES[33][3] = RANGES[47][3] = 'mtext';
-                MathJax.startup.defaultReady();
-                MathJax.startup.document.addStyleSheet();
+    MathJax = {
+            loader: {
+                load: ['[custom]/xypic.js'],
+                paths: {custom: 'https://cdn.jsdelivr.net/gh/sonoisa/XyJax-v3@3.0.1/build/'}
             },
-            pageReady: () => {
-                /*var safeOptions = MathJax.startup.document.safe.options;
-                safeOptions.safeProtocols.file = false;
-                safeOptions.idPattern = /^mjx-[-a-zA-Z0-9_.:]+$/;
-                safeOptions.dataPattern = /^data-(mjx|semantic)-/;*/
-                //MathJax.startup.document.options.internalSpeechTitles = true;
-                console.debug('MathJax is initialized');
-            }
-        },
-        tex: {
-            macros: {
-                /*
-                    MathJax.startup.input[0].configuration.handlers.get("macro")._configuration.items
-                */
-                // https://github.com/mathjax/MathJax/pull/1810/files
+            tex: {
+                macros: {
                 AA:"\u00c5",alef:"\\aleph",alefsym:"\\aleph",Alpha:"\\mathrm{A}",and:"\\land",ang:"\\angle",Bbb:"\\mathbb",Beta:"\\mathrm{B}",bold:"\\mathbf",bull:"\\bullet",C:"\\mathbb{C}",Chi:"\\mathrm{X}",clubs:"\\clubsuit",cnums:"\\mathbb{C}",Complex:"\\mathbb{C}",coppa:"\u03D9",Coppa:"\u03D8",Dagger:"\\ddagger",Digamma:"\u03DC",darr:"\\downarrow",dArr:"\\Downarrow",Darr:"\\Downarrow",diamonds:"\\diamondsuit",empty:"\\emptyset",Epsilon:"\\mathrm{E}",Eta:"\\mathrm{H}",euro:"\u20AC",exist:"\\exists",geneuro:"\u20AC",geneuronarrow:"\u20AC",geneurowide:"\u20AC",H:"\\mathbb{H}",hAar:"\\Leftrightarrow",harr:"\\leftrightarrow",Harr:"\\Leftrightarrow",hearts:"\\heartsuit",image:"\\Im",infin:"\\infty",Iota:"\\mathrm{I}",isin:"\\in",Kappa:"\\mathrm{K}",koppa:"\u03DF",Koppa:"\u03DE",lang:"\\langle",larr:"\\leftarrow",Larr:"\\Leftarrow",lArr:"\\Leftarrow",lrarr:"\\leftrightarrow",Lrarr:"\\Leftrightarrow",lrArr:"\\Leftrightarrow",Mu:"\\mathrm{M}",N:"\\mathbb{N}",natnums:"\\mathbb{N}",Nu:"\\mathrm{N}",O:"\\emptyset",officialeuro:"\u20AC",Omicron:"\\mathrm{O}",or:"\\lor",P:"\u00B6",pagecolor:["",1],part:"\\partial",plusmn:"\\pm",Q:"\\mathbb{Q}",R:"\\mathbb{R}",rang:"\\rangle",rarr:"\\rightarrow",Rarr:"\\Rightarrow",rArr:"\\Rightarrow",real:"\\Re",reals:"\\mathbb{R}",Reals:"\\mathbb{R}",Rho:"\\mathrm{P}",sdot:"\\cdot",sampi:"\u03E1",Sampi:"\u03E0",sect:"\\S",spades:"\\spadesuit",stigma:"\u03DB",Stigma:"\u03DA",sub:"\\subset",sube:"\\subseteq",supe:"\\supseteq",Tau:"\\mathrm{T}",textvisiblespace:"\u2423",thetasym:"\\vartheta",uarr:"\\uparrow",uArr:"\\Uparrow",Uarr:"\\Uparrow",varcoppa:"\u03D9",varstigma:"\u03DB",vline:"\\smash{\\large\\lvert}",weierp:"\\wp",Z:"\\mathbb{Z}",Zeta:"\\mathrm{Z}",
                 dashint: "\\unicodeInt{x2A0D}",
                 ddashint: "\\unicodeInt{x2A0E}",
@@ -64,7 +34,7 @@
             inlineMath: [ ['$','$'], ['$$', '$$']],
             processEscapes: true,
             packages: {'[+]': mathPackages},
-            tags: mathJaxTags,
+            tags: "all",
             formatError:               // function called when TeX syntax errors occur
                 (jax, err) => {
                     var message = err.message.replace(/\n.*/, "");
@@ -99,7 +69,11 @@
                 ]}*/
             }
         }
-    };</script>
+    };
+    </script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3.1.4/es5/tex-chtml-full.js"></script>
 </head>
 <body></body>
 </html>
